# Tree_Modeling

./: 2dSCA.py  3dSCA.py  3d_cube  3d_cylinder  3d_tree_model  Auth_2D_Tree.py  TreeViewer  auth_3d_sca.py  csv_reader  csv_reader.cpp  desktop_gen  gui.hpp  gui_header_source.cpp  header-test_serch_main.cpp  jet_rev  jetserch  jetson_search  laptop  new_tree_info.csv  oneBranchAttractor.py  opengl.cpp  plot.py  rev_tree_gen  rev_tree_gen.cpp  rev_tree_gen2  sample.csv  sca.py  sca_tree.csv  seach_pruning  search_Pruning_Branch.cpp  sparse2csr.py  sphere_plot.py  test  test.cpp  tree17.csv  tree23.csv  tree25.csv  tree9.csv  tree_csv_new  tree_csv_new.cpp  (+2 more)
decide_candidates/src/: branches.cpp  callbacks.cpp  draw.cpp  globals.cpp  main.cpp  new_search  source.cpp
decide_candidates/src/include/: branch.h  branches.h  globals.h
for_test_decision/: CMakeLists.txt
for_test_decision/src/: main.cpp  source.cpp
home_develop/: CMakeLists.txt
home_develop/lab_build/: CMakeCache.txt  Makefile  cmake_install.cmake  search_candidates
home_develop/lab_build/trees/: auth_3d_sca.py  tree1.csv  tree10.csv  tree12.csv  tree14.csv  tree15.csv  tree16.csv  tree18.csv  tree19.csv  tree20.csv  tree24.csv  tree26.csv  tree28.csv  tree29.csv  tree6.csv  tree8.csv  tree9.csv
home_develop/src/: branches.cpp  callbacks.cpp  decide_candidates.cpp  draw.cpp  globals.cpp  main.cpp  source.cpp
home_develop/src/include/: branch.h  branches.h  callbacks.h  draw.h  globals.h
home_develop/src/trees/: tree3.csv
home_develop/trees/: auth_3d_sca.py  tree21.csv  tree7.csv
(+3 files in other folders)
